--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="Main Page" content="Homework for GOİT Courses" />
+    <meta name="Main Page" content="Homework for Go-It Courses" />
     <title>web studios</title>
     <!--Bağlantılar bölümünününü içerir-->
     <link rel="stylesheet"
@@ -26,20 +26,20 @@
                 <a class="logo link" href="./index.html">Web<span class="logotext">Studio</span></a>
                 <ul class="nav-menu">
                     <li>
-                        <a class="link" href="./index.html">Studio</a>
+                        <a href="./index.html" class="link studio">Studio</a>
                     </li>
                     <li>
-                        <a class="link" href="./index.html">Portfolio</a>
+                        <a href="./index.html" class="link">Portfolio</a>
                     </li>
                     <li>
-                        <a class="link" href="./index.html">Contacts</a>
+                        <a href="./index.html" class="link">Contacts</a>
                     </li>
                 </ul>
             </nav>
 
             <!--Adres etiketinin html düzenlemesini içerir-->
 
-            <address>
+            <address class="container-adress">
 
                 <ul class="contact-list">
                     <li class="contact-list-link">
@@ -307,66 +307,115 @@
         <!--Dördüncü bölüm (Our Portfolio) html düzenlemesini içerir-->
         <section class="section-four">
             <div class="container">
-                <div clas="section-four-container">
-                    <h2 class="portfolio-header">Our Portfolio</h2>
 
-                    <ul class="portfolio-list">
+                <h2 class="portfolio-header">Our Portfolio</h2>
 
-                        <li class="section-four-list">
+                <ul class="portfolio-list">
 
+                    <li class="section-four-list">
+                        <div class="section-four-list-img-container">
                             <img src="./images/service1.jpg" alt="Banking App" class="portfolio-list-img">
-                            <div class="card-category">
-                                <h3 class="portfolio-list-header">Banking App</h3>
-                                <p class="portfolio-list-text">App</p>
-                            </div>
+                            <p class="portfolio-list-img-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                                · Cloud Storage App
+                            </p>
+                        </div>
 
-                        </li>
-                        <li class="section-four-list">
 
+                        <div class="card-category">
+                            <h3 class="portfolio-list-header">Banking App</h3>
+                            <p class="portfolio-list-text">App</p>
+                        </div>
+
+                    </li>
+                    <li class="section-four-list">
+                        <div class="section-four-list-img-container">
                             <img src="./images/service2.jpg" alt="Cashless Payment" class="portfolio-list-img">
-                            <div class="card-category">
-                                <h3 class="portfolio-list-header">Cashless Payment</h3>
-                                <p class="portfolio-list-text">Marketing</p>
-                            </div>
+                            <p class="portfolio-list-img-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                                · Cloud Storage App
+                            </p>
+                        </div>
 
 
-                        </li>
-                        <li class="section-four-list">
+                        <div class="card-category">
+                            <h3 class="portfolio-list-header">Cashless Payment</h3>
+                            <p class="portfolio-list-text">Marketing</p>
+                        </div>
+
+
+                    </li>
+                    <li class="section-four-list">
+                        <div class="section-four-list-img-container">
                             <img src="./images/service3.jpg" alt="Meditation App" class="portfolio-list-img">
-                            <div class="card-category">
-                                <h3 class="portfolio-list-header">Meditation App</h3>
-                                <p class="portfolio-list-text">App</p>
-                            </div>
+                            <p class="portfolio-list-img-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                                · Cloud Storage App
+                            </p>
+                        </div>
+
+                        <div class="card-category">
+                            <h3 class="portfolio-list-header">Meditation App</h3>
+                            <p class="portfolio-list-text">App</p>
+                        </div>
 
 
-                        </li>
-                        <li class="section-four-list">
+                    </li>
+                    <li class="section-four-list">
+                        <div class="section-four-list-img-container">
                             <img src="./images/service4.jpg" alt="Taxi Services" class="portfolio-list-img">
-                            <div class="card-category">
-                                <h3 class="portfolio-list-header">Taxi Service</h3>
-                                <p class="portfolio-list-text">Marketing</p>
-                            </div>
+                            <p class="portfolio-list-img-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                                · Cloud Storage App
+                            </p>
 
-                        </li>
-                        <li class="section-four-list">
+                        </div>
+                        <div class="card-category">
+                            <h3 class="portfolio-list-header">Taxi Service</h3>
+                            <p class="portfolio-list-text">Marketing</p>
+                        </div>
+
+                    </li>
+                    <li class="section-four-list">
+                        <div class="section-four-list-img-container">
                             <img src="./images/service5.jpg" alt="Screen Illustrations" class="portfolio-list-img">
-                            <div class="card-category">
-                                <h3 class="portfolio-list-header">Screen Illustrations</h3>
-                                <p class="portfolio-list-text">Design</p>
-                            </div>
+                            <p class="portfolio-list-img-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                                · Cloud Storage App
+                            </p>
+                        </div>
 
-                        </li>
-                        <li class="section-four-list">
+                        <div class="card-category">
+                            <h3 class="portfolio-list-header">Screen Illustrations</h3>
+                            <p class="portfolio-list-text">Design</p>
+                        </div>
+
+                    </li>
+                    <li class="section-four-list">
+                        <div class="section-four-list-img-container">
                             <img src="./images/service6.jpg" alt="Online Courses" class="portfolio-list-img">
-                            <div class="card-category">
-                                <h3 class="portfolio-list-header">Online Courses</h3>
-                                <p class="portfolio-list-text">Marketing</p>
-                            </div>
+                            <p class="portfolio-list-img-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                                · Cloud Storage App
+                            </p>
 
-                        </li>
-                    </ul>
-                </div>
+                        </div>
+
+                        <div class="card-category">
+                            <h3 class="portfolio-list-header">Online Courses</h3>
+                            <p class="portfolio-list-text">Marketing</p>
+                        </div>
+
+                    </li>
+                </ul>
             </div>
+
 
 
         </section>
@@ -375,13 +424,15 @@
     <!-- Footer bölümünün html düzenlemesini içerir-->
     <footer class="footer">
         <div class="container footer-box">
-            <div class="footer-logo-text">
+            <div class="footer-logo-text-container">
                 <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
-                <p class="logo-footer-text">
+                <p>
                     Increase the flow of customers and sales for your business with digital
                     marketing & growth solutions.
                 </p>
             </div>
+
+
             <div class="footer-socials-container">
                 <p class="footer-socials-title">Social media</p>
                 <ul class="footer-socials-list">
@@ -419,8 +470,107 @@
                 </ul>
             </div>
 
+            <div class="footer-form-container">
+                <p class="footer-form-title">Subscribe</p>
+
+                <form class="footer-form">
+                    <label for="email" class="footer-form-label">
+                        <input type="email" name="email" placeholder="E-mail" class="footer-form-input" id="email" />
+                    </label>
+
+                    <button type="submit" class="footer-form-btn">
+                        Subscribe
+                        <svg width="24" height="24" class="footer-form-svg">
+                            <use href="./images/icon2.svg#icon-icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
+        </div>
+
+
+
+
+
     </footer>
 
+
+    <!-- Modal window bölümü html düzenlemesini içerir -->
+
+    <div class="modal-page-container">
+        <div class="modal-page">
+            <button class="modal-page-btn" type="button">
+                <svg class="x-icon-svg" width="8" height="8">
+                    <use href="./images/icons-modal.svg#icon-x"></use>
+                </svg>
+            </button>
+
+            <p class="modal-page-title">
+                Leave your contacts and we will call you back
+            </p>
+
+            <form>
+                <div class="modal-page-form">
+                    <label class="modal-page-form-label" for="user-name">Name</label>
+                    <div class="inputs-icons-container">
+                        <input type="text" id="user-name" name="user-name" class="modal-page-form-input" />
+
+                        <svg class="inputs-icons-svg" width="18" height="24">
+                            <use href="./images/icons-modal.svg#icon-name"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="modal-page-form">
+                    <label class="modal-page-form-label" for="user-phone">
+                        Phone</label>
+                    <div class="inputs-icons-container">
+                        <input type="tel" id="user-phone" name="user-phone" class="modal-page-form-input" />
+
+                        <svg class="inputs-icons-svg" width="18" height="24">
+                            <use href="./images/icons-modal.svg#icon-phone"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="modal-page-form">
+                    <label class="modal-page-form-label" for="user-mail">
+                        Email</label>
+                    <div class="inputs-icons-container">
+                        <input type="email" id="user-mail" name="user-mail" class="modal-page-form-input" />
+
+                        <svg class="inputs-icons-svg" width="18" height="24">
+                            <use href="./images/icons-modal.svg#icon-mail"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="modal-page-form-text-container">
+                    <label for="user-comment" class="modal-page-form-label">Comment</label>
+                    <textarea name="user-comment" id="user-comment" placeholder="Text input"
+                        class="text-area"></textarea>
+                </div>
+
+                <div class="checkbox-container">
+                    <input type="checkbox" id="user-privacy" value="true" name="user-privacy"
+                        class="privacy-checkbox visually-hidden" />
+                    <label for="user-privacy" class="privacy-label">
+                        <span class="privacy-span">
+                            <svg width="10" height="8" class="span-svg">
+                                <use href="./images/symbol-defs.svg#icon-Vector"></use>
+                            </svg>
+                        </span>
+                        I accept the terms and conditions of the
+                        <a href="" class="privacy-link">Privacy Policy</a>
+                    </label>
+                </div>
+
+                <button type="submit" class="modal-page-second-btn btn">
+                    Send
+                </button>
+            </form>
+        </div>
+    </div>
 
 
 </body>
